# RedML

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
RedML/models/regression/: LinearRegression.py
src/RedML/: __init__.py
src/RedML/models/: __init__.py
src/RedML/models/regression/: KNNRegression.py  LinearRegression.py  PolynomialRegression.py  SupportVectorRegression.py  __init__.py
